# Splendor-Online

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml
client/: package-lock.json  package.json
client/public/: index.html
client/src/: api.js  index.js
client/src/components/CounterBadge/: index.jsx  style.css
client/src/components/SplendorCard/: index.jsx  style.css
client/src/components/SplendorCardCost/: index.jsx  style.css
client/src/components/SplendorCardCount/: index.jsx  style.css
client/src/components/SplendorCardDevelopmentCard/: index.jsx  style.css
client/src/components/SplendorCardDrawPile/: index.jsx
client/src/components/SplendorCoin/: index.jsx
client/src/components/SplendorCoinCount/: index.jsx  style.css
client/src/components/SplendorCoinPile/: index.jsx  style.css
client/src/components/SplendorDevelopmentCard/: index.jsx  style.css
client/src/components/SplendorGemMiniGem/: style.css
client/src/components/SplendorMiniGem/: index.jsx
client/src/components/SplendorNobleTile/: index.jsx  style.css
client/src/components/SplendorNumber/: style.css
client/src/components/SplendorTile/: index.jsx  style.css
scheme/: splendor-schema.drawio
server/: .pre-commit-config.yaml  app.py  pyproject.toml
server/splendor/: __init__.py  app.py  model.py
server/splendor/controller/: __init__.py  game_action.py  game_flow.py  game_setup.py  game_util.py  socket.py
server/splendor/database/: __init__.py  crud.py  splendor_card.py  splendor_tile.py  user.py
server/splendor/database/sql/: setup_sample_user.sql  setup_splendor.sql  setup_splendor_card.sql  setup_splendor_tile.sql  setup_system.sql
server/splendor/ignored/controller/: rest.py
server/splendor/model/: client.py  components.py
server/splendor/models/: components.py  containers.py  enums.py  exceptions.py  game.py  items.py
server/splendor/models/game/: __init__.py  board.py  caches.py
server/tests/: debugger.py  test_controller_game_setup.py  test_controller_game_simulation.py  test_database_setup.py  test_game_simulation.py
splendor/: __init__.py  __main__.py
splendor/app/: __init__.py  flask.py  flask_login.py  flask_socketio.py  flask_sqlalchemy.py
splendor/controllers/: __init__.py  lobby.py  room.py
splendor/models/: boards.py  components.py  enums.py  game.py  uuid_object.py
splendor/models/orm/: rooms.py  users.py
splendor/static/: index.html
splendor/views/: __init__.py
splendor/views/client/: package-lock.json
tests/: __init__.py
(+22 files in other folders)
