[tool.poetry]
name = "splendor"
version = "0.1.0"
description = ""
authors = ["Hepheir <hepheir@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
SQLAlchemy = "^1.4.23"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
pylint = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
