[tool.poetry]
name = "splendor"
version = "0.1.0"
description = ""
authors = ["Hepheir <hepheir@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
SQLAlchemy = "^1.4.23"
Flask-SQLAlchemy = "^2.5.1"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
pylint = "^2.10.1"
pre-commit = "^2.15.0"
pytest = "^6.2.5"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
